# gemini-quiz-cli-med

./: .gitignore  App.tsx  README.md  README.tr.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts  vite.config.ts
components/: AppErrorBoundary.tsx  Button.tsx  FileUploader.tsx  QuestionChat.tsx  QuizConfigurationForm.tsx  QuizTimer.tsx  ResultQuestionCard.tsx  ResultsStats.tsx  SettingsModal.tsx  SourceViewerModal.tsx
constants/: demoQuestions.ts  pdfLimits.ts  translations.ts
docs/: codebase-inventory.md
hooks/: useQuizConfigPanel.ts  useTranslations.ts
services/: appFlows.ts  geminiService.ts  pdfExportService.ts  pdfService.ts  pdfjsWorker.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/jre/: README.md
src-tauri/resources/jre/linux/: README.md
src-tauri/resources/jre/linux/jdk-21.0.10+7-jre/: release
src-tauri/resources/jre/linux/jdk-21.0.10+7-jre/conf/security/: java.security
src-tauri/resources/jre/linux/jdk-21.0.10+7-jre/lib/: classlist  jexec  jspawnhelper
src-tauri/resources/jre/macos/: README.md
src-tauri/src/: main.rs  pdf_runtime.rs  windows_process.rs
store/: index.ts  useCliStatusStore.ts  useGenerationStore.ts  useQuizSessionStore.ts  useRoutingStore.ts  useSettingsStore.ts
utils/: asyncScheduling.ts  devLog.ts  questionSimilarity.ts  textProcessing.ts
views/: FlashcardsView.tsx  LandingView.tsx  QuizView.tsx  ReadyView.tsx  ResultsView.tsx
(+102 files in other folders)
